# code_to_screen

./: README.md
visual_python/: __init__.py  backends.py  core.py  monitor.py  parser.py  signals.py
visualpython/: INSTALLATION.md  README.md  README_UNIFIED.md  approach_comparison.py  compare_approaches.py  demo_buttons.csv  demo_live.py  demo_script.py  pixel_executable_transpiler.py  py_to_csv_transpiler.py  pyproject.toml  test_animation.csv  test_live_animation.csv  test_live_demo.py  test_live_functionality.py  test_simulator_integration.py  test_unified_integration.py  visualpython_unified.py
visualpython/examples/: demo_fontgrid.py  demo_live.py  demo_step.py  hardware_control.py  transpiler_demo.py
visualpython/src/visualpython/: __init__.py  backends.py  cli.py  core.py  monitor.py  parser.py  signals.py
visualpython/src/visualpython/backends/: mock_backend.py
visualpython/tests/: test_core.py  test_monitor.py
