[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualpython"
version = "0.2.0"
description = "Direct visual execution of Python code without traditional compilation - revolutionary AST-based live coding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VisualPython Team", email = "team@visualpython.org"}
]
maintainers = [
    {name = "VisualPython Team", email = "team@visualpython.org"}
]
keywords = [
    "live-coding", "visual-programming", "ast", "pyodide", 
    "creative-coding", "education", "compilation-free"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"

dependencies = [
    "watchdog>=3.0.0",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991"
]
hardware = [
    "pyserial>=3.5"
]
visualization = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0"
]
all = [
    "visualpython[dev,hardware,visualization]"
]

[project.urls]
Homepage = "https://github.com/visualpython/visualpython"
Documentation = "https://visualpython.readthedocs.io"
Repository = "https://github.com/visualpython/visualpython"
"Bug Tracker" = "https://github.com/visualpython/visualpython/issues"
Changelog = "https://github.com/visualpython/visualpython/blob/main/CHANGELOG.md"

[project.scripts]
visualpython = "visualpython.cli:main"
vp = "visualpython.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
visualpython = ["web/*", "examples/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]